<!--
   Copyright 2020 Google LLC

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<androidx.constraintlayout.widget.ConstraintLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:card_view="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context="com.google.ar.core.examples.java.persistentcloudanchor.MainLobbyActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/begin_navigate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_navigate_button_text"
        android:theme="@style/AppButtonTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.744"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resolve_instructions" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_resolve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.46" />
        <TextView
            android:id="@+id/orText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/guideline_center"
            app:layout_constraintBottom_toBottomOf="@id/guideline_center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="or"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="40dp"
            android:layout_height="1dp"
            app:layout_constraintTop_toTopOf="@id/guideline_center"
            app:layout_constraintBottom_toBottomOf="@id/guideline_center"
            app:layout_constraintStart_toEndOf="@id/orText"
            android:layout_marginLeft="16dp"
            app:cardBackgroundColor="@android:color/primary_text_dark"
            card_view:cardElevation="0dp"
            />
        <com.google.android.material.card.MaterialCardView
            android:layout_width="40dp"
            android:layout_height="1dp"
            app:layout_constraintTop_toTopOf="@id/guideline_center"
            app:layout_constraintBottom_toBottomOf="@id/guideline_center"
            app:layout_constraintEnd_toStartOf="@id/orText"
            android:layout_marginRight="16dp"
            app:cardBackgroundColor="@android:color/primary_text_dark"
            card_view:cardElevation="0dp"
            />

    <TextView
        android:id="@+id/host_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:text="@string/host_title_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/host_instructions"
        android:layout_width="403dp"
        android:layout_height="104dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/host_instructions_text"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/host_title"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/host_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/host_button_text"
        android:theme="@style/AppButtonTheme"
        app:layout_constraintBottom_toTopOf="@+id/guideline_host"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/get_distance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/get_distance_text"
        android:theme="@style/AppButtonTheme"
        app:layout_constraintBottom_toTopOf="@+id/guideline_host"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/firebase_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/firebase_button_text"
        android:theme="@style/AppButtonTheme"
        app:layout_constraintBottom_toTopOf="@+id/guideline_host"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/resolve_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resolve_title_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_resolve" />

    <TextView
        android:id="@+id/resolve_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/resolve_instructions_text"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resolve_title"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/begin_resolve_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_resolve_button_text"
        android:theme="@style/AppButtonTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resolve_instructions" />

</androidx.constraintlayout.widget.ConstraintLayout>
