<!--
   Copyright 2020 Google LLC

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<androidx.constraintlayout.widget.ConstraintLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:card_view="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="match_parent">
        <TextView
          android:id="@+id/nickname_instructions"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:text="@string/nickname_instructions_text"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>
      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/nickname_input"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/nickname_instructions">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nickname_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
      </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/destination_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="20dp"
        android:text="@string/destination_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/destination_radio_group"
        android:layout_width="356dp"
        android:layout_height="130dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destination_radio">

        <RadioButton
            android:id="@+id/destination_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginTop="20dp"
            android:text="@string/destination_yes"
            app:layout_constraintEnd_toStartOf="@+id/not_destination_radio_button"
            app:layout_constraintHorizontal_bias="0.362"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/destination_radio" />

        <RadioButton
            android:id="@+id/not_destination_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="44dp"
            android:text="@string/destination_no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/destination_radio" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>
