<!--
   Copyright 2020 Google LLC

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<androidx.constraintlayout.widget.ConstraintLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:card_view="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context="com.google.ar.core.examples.java.persistentcloudanchor.MainLobbyActivity">


    <TextView
        android:id="@+id/navigate_title"
        android:layout_width="192dp"
        android:layout_height="106dp"
        android:gravity="center"
        android:paddingTop="60dp"
        android:text="@string/navigate_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enter_anchor_instructions"
        android:layout_width="316dp"
        android:layout_height="21dp"
        android:gravity="left"
        android:text="@string/navigate_source_text"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_enter" />

    <!--    app:layout_constraintTop_toBottomOf="@id/enter_anchor"-->
<!--    app:layout_constraintStart_toStartOf="parent"-->
<!--    app:layout_constraintEnd_toEndOf="parent"-->


    <Spinner
        android:id="@+id/select_source"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:minHeight="48dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_anchor_instructions" />

    <TextView
        android:id="@+id/enter_anchor_instructions4"
        android:layout_width="316dp"
        android:layout_height="21dp"
        android:layout_marginTop="84dp"
        android:gravity="left"
        android:text="@string/navigate_dest_text"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_source" />

    <Spinner
        android:id="@+id/select_destination"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:minHeight="48dp"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toTopOf="@+id/find_path_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_anchor_instructions4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/find_path_button"
        android:layout_width="118dp"
        android:layout_height="60dp"
        android:layout_marginTop="68dp"
        android:text="@string/find_path_text"
        android:theme="@style/AppButtonTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_destination" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="574dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="106dp" />


    <!--    <com.google.android.material.card.MaterialCardView-->
<!--        android:layout_width="30dp"-->
<!--        android:layout_height="1dp"-->
<!--        app:cardBackgroundColor="@android:color/primary_text_dark"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/guideline_center"-->
<!--        app:layout_constraintTop_toTopOf="@id/guideline_center"-->
<!--        card_view:cardElevation="0dp"-->
<!--        tools:layout_editor_absoluteX="150dp" />-->


<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/enter_anchor"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="40dp"-->
<!--        android:layout_marginTop="24dp"-->
<!--        android:layout_marginEnd="40dp"-->
<!--        android:hint="@string/enter_anchor_name_hint"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/enter_anchor_instructions" />-->


</androidx.constraintlayout.widget.ConstraintLayout>
